--- a/public/embed-test.html
+++ b/public/embed-test.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>IBS embed test</title>
+    <title>Uni Webinars</title>
   </head>
   <body>
     <div id="show"></div>
