--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>IBS</title>
+    <title>Uni Webinars</title>
   </head>
   <body>
     <div id="root"></div>
